Fixed layout issues in Task panel.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.container {
+  position: relative;
+}
+
 button {
   margin: 5px;
 }
@@ -21,7 +25,7 @@ button {
 
 .sidebar {
   width: 10%;
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
